# aule-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: dc_motor.rs  long_dead_time.rs  motor.rs  mpc.rs  rl_circuit.rs  step_response.rs  third_order_system.rs
examples/bridge/swd/: pc_side.rs
examples/bridge/swd/embedded_side/: Cargo.toml
examples/bridge/swd/embedded_side/.cargo/: config.toml
examples/bridge/swd/embedded_side/src/: main.rs
examples/embedded/: Cargo.toml  build_error.txt
examples/embedded/.cargo/: config.toml
examples/embedded/src/: main.rs
examples/no_std_rppico2/: Cargo.toml
examples/no_std_rppico2/.cargo/: config.toml
examples/no_std_rppico2/src/: main.rs
shaders/: fragment.glsl
src/: block.rs  chart.rs  gain.rs  lib.rs  line_equation.rs  main.rs  pid.rs  plotter.rs  poly.rs  printer.rs  s.rs  setpoint.rs  signal.rs  simulation.rs  ss.rs  step.rs  tf.rs  time.rs  writer.rs
src/block/: delay.rs  gain.rs  mimo.rs  mod.rs  observer.rs  pid.rs  saturation.rs  siso.rs  smith_predictor.rs
src/continuous/: mod.rs  poly.rs  s_var.rs  ss.rs  tf.rs
src/continuous/solver/: euler.rs  mod.rs  runge_kutta.rs
src/discrete/: mod.rs  poly.rs  poly_inv.rs  ss.rs  tf.rs  z_inv_var.rs  z_var.rs
src/discrete/integration/: euler.rs  mod.rs  runge_kutta.rs
src/discrete/solver/: euler.rs  runge_kutta.rs
src/error/: good_hart.rs  iae.rs  ise.rs  itae.rs  mod.rs
src/identification/: mod.rs
src/identification/first_order/: hagglund.rs  mod.rs  smith.rs  sundaresan_krishnaswamy.rs  ziegler_nichols.rs
src/identification/second_order/: mod.rs  mollenkamp.rs  smith.rs
src/input/: file_samples.rs  impulse.rs  mod.rs  ramp.rs  sawtooth.rs  setpoint.rs  sinusoid.rs  square.rs  step.rs
src/math/: absolute.rs  float_point.rs  from_f64.rs  from_usize.rs  lerp.rs  line_equation.rs  mod.rs  number.rs  poly.rs  recip_of_count.rs  sample.rs  scale.rs  sinusoidal.rs  zeroish.rs
src/metrics/: good_hart.rs  iae.rs  ise.rs  itae.rs  mod.rs
src/monitor/: chart.rs  line.rs  mod.rs  plotter.rs  printer.rs  writer.rs
src/output/: magmar.rs  mod.rs  plotter.rs  printer.rs  writer.rs
src/tier1/: delay.rs  mod.rs  observer.rs  pid.rs  saturation.rs  smith_predictor.rs
src/tier1/bridge/: mod.rs  swd.rs
src/tier1/filter/: mod.rs
src/tier1/filter/first_order/: high_pass.rs  low_pass.rs  mod.rs
src/tier1/filter/second_order/: band_pass.rs  band_stop.rs  bessel.rs  biquad.rs  butterworth.rs  chebyshev1.rs  chebyshev2.rs  mod.rs
src/tier2/: mod.rs  smith_predictor.rs
src/tier3/: mod.rs  mpc.rs  step_response.rs
validation/: requirements.txt  validation.py
