[package]
name = "aule"
version = "0.1.0"
edition = "2024"


[dependencies]
libm = { version = "0.2" }

[features]
default = ["std"]
alloc = ["ndarray"]
std = ["alloc"]

[dependencies.ndarray]
version = "0.16.0"
default-features = false
optional = true
# TODO: make this only for no_std targets with thumbv6m-none-eabi
features = ["portable-atomic-critical-section"]

[lib]
name = "aule"


[[example]]
name = "dc_motor"
path = "examples/dc_motor.rs"

[[example]]
name = "motor"
path = "examples/motor.rs"

[[example]]
name = "rl_circuit"
path = "examples/rl_circuit.rs"

[[example]]
name = "third_order_system"
path = "examples/third_order_system.rs"
