[package]
name = "aule"
version = "0.1.0"
edition = "2024"


[dependencies]
libm = { version = "0.2" }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }

[features]
default = ["std", "swd"]
alloc = ["ndarray"]
std = ["alloc", "probe-rs"]
swd = []

[dependencies.ndarray]
version = "0.16.0"
default-features = false
optional = true
features = ["portable-atomic-critical-section"]

[dependencies.probe-rs]
version = "0.30.0"
optional = true

[lib]
name = "aule"


[[example]]
name = "dc_motor"
path = "examples/dc_motor.rs"

[[example]]
name = "motor"
path = "examples/motor.rs"

[[example]]
name = "rl_circuit"
path = "examples/rl_circuit.rs"

[[example]]
name = "third_order_system"
path = "examples/third_order_system.rs"

[[example]]
name = "bridge_swd"
path = "examples/bridge/swd/pc_side.rs"
