[package]
name = "embedded_side"
version = "0.1.0"
edition = "2024"

[dependencies]
aule = { path = "../../../../", default-features = false, features = [
    "swd",
    "alloc",
] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
defmt-rtt = "0.4"
defmt = "0.3"
microbit-v2 = "0.16.0"
panic-probe = "1.0.0"
embedded-alloc = "0.6.0"
